--- a/_posts/2023-05-13-Diary.md
+++ b/_posts/2023-05-13-Diary.md
@@ -23,9 +23,7 @@ tags: Study
 ![KakaoTalk_Photo_2023-05-13-23-50-48 006](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7947cd09-b931-414f-930d-5ed038840b52)
 
 
-
 올리 지그 초상화, 약간 제프 베이조스 닮았다
-
 
 송은 문화재단은 100% 비영리재단으로 운영되고 있기 때문에 양질의 전시를 무료로 관람할 수 있다는 것이 장점, 다만 주차를 못했던 것은 아쉬웠다. 1층에는 아이웨이웨이 작품과 넘처나는 중국의 산업화와 이것을 억압하려는 중국 정부의 현상을 비판한 작품을 감상
 
@@ -49,10 +47,9 @@ tags: Study
 통창에서 살고 싶다 ㅠㅠ
 
 
-![KakaoTalk_Photo_2023-05-13-23-50-24 010](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/186a56ad-f39b-425d-9063-bdadbbd11ff5)
-![KakaoTalk_Photo_2023-05-13-23-50-55 014](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b193a565-de51-4ce8-8895-a724fbf06b8b)
+![KakaoTalk_Photo_2023-05-13-23-50-22 008](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/f7e9f717-1434-487b-9909-08da23a5af26)
 
-사실 이 작품은 다른 작품들이랑 연작이고 구슬로 연결되어 있고, 동양 서양화가 연결되어 있다는 대충 그런 느낌이었는데, 이것만 이상깊어서 이것만 찍었다.
+
 
 3층부터는 여성 작가들로만 구성된 작품이 있었다.
 
@@ -81,6 +78,8 @@ tags: Study
 
 ![KakaoTalk_Photo_2023-05-13-23-51-02 023](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/73bb730b-58a2-4603-8c6a-855757bbb8dd)
 ![KakaoTalk_Photo_2023-05-13-23-51-03 024](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/ff5eb081-ed5c-4359-9a53-1d581e0b228a)
+![KakaoTalk_Photo_2023-05-13-23-50-19 005](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/ea589d47-b56b-4bcb-a223-798940740edd)
+
 Pencil on paper, 연필을 여러 번 겹쳐서 계속 그림으로써 저렇게 검정색을 만들었다고 하는데 노고에 박수를
 
 ![KakaoTalk_Photo_2023-05-13-23-51-04 025](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/9d347263-8fed-4d33-810d-1f7362cb6542)
@@ -96,7 +95,4 @@ kill kill, 대나무의 영속적인 성격과 함께 빨간색의 잎을 그려
 ![KakaoTalk_Photo_2023-05-13-23-51-06 028](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b61832c3-0c01-4a6c-a851-2ce033bd7254)
 맨마지막에 본 것, 이것도 열심히 들었는데 무슨 내용인지 기억이 안난다... 미우라치오 카텔란 전시가 그냥 생각났는데, 빨리 가보고 싶다.
 
-
-무엇보다 거기에 미술 회화에 진심인 사람이 있어서 말을 걸고 싶었지만, 소심남이어서 말은커녕 그러한 사람들의 에티튜드만 보고, 전시에는 오롯이 집중을 하지 못한 것은 아닌가라는 생각이 들었다.
-
-
+무엇보다 거기에 미술 회화에 진심인 사람이 있어서 말을 걸고 싶었지만, 소심남이어서 말은커녕 그러한 사람들의 에티튜드만 보고, 전시에는 오롯이 집중을 하지 못한 것은 아닌가라는 생각이 들었다. 아직 나도 나를 못 내려놓았구나
