--- a/_posts/2023-05-13-Diary.md
+++ b/_posts/2023-05-13-Diary.md
@@ -96,3 +96,5 @@ kill kill, 대나무의 영속적인 성격과 함께 빨간색의 잎을 그려
 맨마지막에 본 것, 이것도 열심히 들었는데 무슨 내용인지 기억이 안난다... 미우라치오 카텔란 전시가 그냥 생각났는데, 빨리 가보고 싶다.
 
 무엇보다 거기에 미술 회화에 진심인 사람이 있어서 말을 걸고 싶었지만, 소심남이어서 말은커녕 그러한 사람들의 에티튜드만 보고, 전시에는 오롯이 집중을 하지 못한 것은 아닌가라는 생각이 들었다. 아직 나도 나를 못 내려놓았구나
+
+![KakaoTalk_Photo_2023-05-14-01-00-04](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/9aad565a-6a22-44c3-b071-7ec81b7d5891)
