--- a/_posts/2023-05-13-Diary.md
+++ b/_posts/2023-05-13-Diary.md
@@ -1,10 +1,13 @@
 ---
 title: 올리 지그 중국현대미술 컬렉션전
-tags: Study
+tags: Diary, Study, Art
 ---
+
+
+### 올리 지그 중국현대미술 컬렉션전
 <img width="1440" alt="스크린샷 2023-05-13 오후 11 33 04" src="https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3ac57278-1219-43b4-9adf-81db60903a58">
 
-텍스트를 읽는 것은 다양한 사람들이랑 대화를 하는 것보다 투자하는 시간 대비 양질의 정보를 제공해줄 수 있다는 데에 장점이 있다. 그렇기 떄문에 뉴스를 읽거나 때로는 영화보다 책이 주는 울림이 커서 종종 그렇게 하는 편이다. 요즘 그도 그럴 것이 없이 다른 운동을 한다거나 다른 너무 피로해져서 텍스트를 읽는 것에 관해서 다소 게을러졌다가 부랴부랴 밀린 텍스트를 읽게 됐는데, 그것은 내가 구독하고 있는 까탈로그라는 디에디트라는 페이지에서 제공해주고 있는 뉴스레터였다. 거기서 막차를 탈 수 있는 전시를 알려주었는데, 거기에 울리 지그 중국현대미술 컬렉션전이 있었고, 그렇게 무작정 가게 되었다. (원래는 국제갤러리에서 하고 있는 이우환전을 가고 싶었는데, 100% 사전 예약제임과 동시에, 모두 예약이 차 있어서 가지 못했다. 선임님 결혼식이 2시에 있었기 떄문에 그것을 끝나고 차를 몰고 무작정 가게 되었다.)
+ 텍스트를 읽는 것은 다양한 사람들이랑 대화를 하는 것보다 투자하는 시간 대비 양질의 정보를 제공해줄 수 있다는 데에 장점이 있다. 그렇기 떄문에 뉴스를 읽거나 때로는 영화보다 책이 주는 울림이 커서 종종 그렇게 하는 편이다. 요즘 그도 그럴 것이 없이 다른 운동을 한다거나 다른 너무 피로해져서 텍스트를 읽는 것에 관해서 다소 게을러졌다가 부랴부랴 밀린 텍스트를 읽게 됐는데, 그것은 내가 구독하고 있는 까탈로그라는 디에디트라는 페이지에서 제공해주고 있는 뉴스레터였다. 거기서 막차를 탈 수 있는 전시를 알려주었는데, 거기에 울리 지그 중국현대미술 컬렉션전이 있었고, 그렇게 무작정 가게 되었다. (원래는 국제갤러리에서 하고 있는 이우환전을 가고 싶었는데, 100% 사전 예약제임과 동시에, 모두 예약이 차 있어서 가지 못했다. 선임님 결혼식이 2시에 있었기 떄문에 그것을 끝나고 차를 몰고 무작정 가게 되었다.)
 
 미술관에 가는 것은 어떠한 안목을 기르는 것을 넘어서 그곳의 분위기를 온전히 곱씰을 수 있다는 것에 중요점도 있는 것 같다. 어떤 사람들이 어떠한 옷차림으로 어떠한 태도로 미술관을 관람하는지는 정말 다 다르다. 그것을 보면서 다소 각박하게 움직였던 과거에 비해서 다른 사람을 통해서 에너지도 얻을 수 있고, 그러한 사람들의 에티튜드도 배울 수 있어서 좋았다.
 
@@ -98,3 +101,11 @@ kill kill, 대나무의 영속적인 성격과 함께 빨간색의 잎을 그려
 무엇보다 거기에 미술 회화에 진심인 사람이 있어서 말을 걸고 싶었지만, 소심남이어서 말은커녕 그러한 사람들의 에티튜드만 보고, 전시에는 오롯이 집중을 하지 못한 것은 아닌가라는 생각이 들었다. 아직 나도 나를 못 내려놓았구나
 
 ![KakaoTalk_Photo_2023-05-14-01-00-04](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/9aad565a-6a22-44c3-b071-7ec81b7d5891)
+
+
+### 조선의 백자 군자지향
+리움 미술관의 역대급 전시 큐레이션이라는 말과 함께 가게 되었다. 기존에 리움 미술관에 관해서 미우라치오 카텔란 전시만 알고 있었는데, 이렇게 좋은 전시가 무료로 게다가 주차도 무료로 할 수 있다는 말은 굉장히 끌리게 되어서 무작정 예약 먼저 하고, 어머니와 함꼐 같이 가게 되었다.
+
+
+
+### 심리학을 만나 행복해졌다, 김부장 이야기, 마음의 여섯가지 얼굴, 
