--- a/_posts/2023-06-10-Diary.md
+++ b/_posts/2023-06-10-Diary.md
@@ -1,6 +1,6 @@
 ---
 title: 어디서 무엇이 되어 다시 만나랴
-tags: Diary, Study, Art
+tags: Diary Study Art
 ---
 
 무리 알레르기가 있어서 무리를 지어다니는 사람들에게 괜히 못 끼고는 한다. 고등학교 때 퍽 공부 좀 해보겠다고 친구들이랑 어울리는 것들을 끊어서 그런지 요즘에는 무리에 끼려고 하려면 의식하면서 친해져야 했었다. 이런 나에게도 그저 조금 더 흥이 많다는 점이 다른데, 그럴 때마다 인싸시네요라는 말은 진짜 왜 그런 말을 하는지 모르겠다. 아니에요 인싸가 전혀 아닙니다. 맞아요 인싸처럼 '지내려고' 있어요. 
