--- a/_posts/2023-06-06-Diary.md
+++ b/_posts/2023-06-06-Diary.md
@@ -1,18 +1,21 @@
 ---
 title: 숨길 수  없는 세 가지 기침 가난 사랑
-tags: Diary, Study, Art
+tags: Diary Study Art
 ---
 
 기침, 가난 그리고 사랑이라는 말이 있다. 물론 이렇게 세 가지로 싹퉁 묶어버리는 것을 별로 좋아하지는 않지만, 
-엄마는 29살에 누나를 낳은 나이가 되었고, 29살의 이장훈은 아직 머스타드 옷을 입고 다니면서 페슽벌을 다닌다. 폭발적인 
+엄마는 29살에 누나를 낳은 나이가 되었고, 29살의 이장훈은 아직 머스타드 옷을 입고 다니면서 페스티벌을 다닌다. 
 
-1. 엄마랑 같이 본 전시 ()
+1. 엄마랑 같이 본 전시 (조선백자 - 군자백년?)
+엄마랑 리움 조선ㅂ개자 전시를 보게 되었다. 엄마와 함께 데이ㅌ도 오랜만에 하였고, 카페에 가서 이런저런 많은 이야기를 나누면서 엄마가 오는 길에 '덕분에 한 달동안은 행복하게 지낼 수 있겠다.'라고 말한 것이 이제 앞으로 열심히 가족한테도 집중을 해야지라고 생각이 들었다.
 
 2. 외국인 밋업
 만나는 사람만 만나게 되고, 하는 이야기가 점점 안으로 굽어서 들어가는 것 같다는 생각을 하게 되었다. 올해는 구김살을 많이 없에야지라는 생각 때문에 그냥 다른 여타 활동을 안하고 나를 꾸미는 활동에만 집중을 하려고 했는데 쌍딩이 동생이 그러한 것들을 한꺼번에 하면 되지 않느냐고 말을 해주어서 큰 용기를 내어서 신청을 하게 되었다. 스타트업 PM 직무를 하고 있는 ㅇㅈ친구가 인스타그램 스토리에 외국인 meetup에 관하여 올려주게 되었는데 정말 많이 떨리고 괜한 관성 떄무넹 
 
 3. 월드디제이 페스티벌
+ 월드디제이 페스티벌을 통해서 동생이랑 ㅈㅎ형이랑 재밌게 놀았다. 그간 스트레스를 많이 풀었고, 대학생 친구도 오랜만에 만날 수 있었던 하루였다.
 
-5. 코딩 강의 2개
+4. 코딩 강의 2개
+
 
 요즘 문뜩 든 생각은 내가 이러헥 돈을 벌어서 어느 것에 행복감을 느끼면서 살 것인가라는 생각을 하게 되었다. 진짜로 내가 몰고 싶어하는 자동차나 내가 가지고 싶어하는 것들을 가지면서 살 수 있을까? 
