--- a/_posts/2023-07-22-Stury.md
+++ b/_posts/2023-07-22-Stury.md
@@ -3,7 +3,7 @@ title: 베인엔컴퍼티 논리적으로 일하는 방법
 tags: Study
 ---
 ### ppt
-1. ppt 는 만화적인 구성으로 작성을 하도록 할 것
+1. ppt 는 만화적인 구성으로 작성을 하도록 할 것 (왼쪽 위에서 오른쪽 아래로)
 2. '다음', '하기' 와 같은 표현 사용하지 말도록 학기
 3. head message는 완전무결하게 작성하도록 하기
 4. 듣는 사람의 배경지식을 고려하여서 ppt 제작
