--- a/_posts/2023-07-22-Stury.md
+++ b/_posts/2023-07-22-Stury.md
@@ -1,8 +1,9 @@
 ---
-title: 베인엔컴퍼티 논리적으로 일하는 방법
+title: 베인엔컴퍼니 논리적으로 일하는 방법
 tags: Study
 ---
-### ppt
+
+### PPT
 1. ppt 는 만화적인 구성으로 작성을 하도록 할 것 (왼쪽 위에서 오른쪽 아래로)
 2. '다음', '하기' 와 같은 표현 사용하지 말도록 학기
 3. head message는 완전무결하게 작성하도록 하기
@@ -13,7 +14,22 @@ tags: Study
 7. 서식 복사 서식 붙여넣기 자주 사용하기 (ctrl + shift + c/v)
 8. 컬러 스킴 만들어두어서 다른 사람들도 사용하기 좋게 만들어두기 
 
-### excel
+### Excel
+1. 
+2. 
 
 ### Structered thinking
- 
+1. 문제의 원인을 확인하기 위해서는 logic tree를 작성하여서 영향을 주는 모든 요소들의 원인을 찾아가도록 하기
+2. 추천 책 : 바바라 민토 <<논리의 기술>>
+3. 신문 기사의 head line 만 보고, logic trree를 충분히 그려보고, 답을 비교해보기
+4. 리서치를 잘하기 위해서는
+ - 구글 검색 위주, 유료자료는 잘 안보는 편 (filetype : pdf)
+ - 처음에 감을 잡을 때는 증권사리포트/시장리포트 적극 활용 (fnguide, kisline 등)
+ - 뉴스 서치도 크게 도움
+ 5. 추정을 하기 위해서는 구조적 사고를 통해 창출
+ 6. 리서치 방법론 : 공신력 있는 숫자를 가져오거나 소비자 조사 (Survey, in-depth, FGI : Focus Group Interview) 혹은 전문가 인터뷰 (비용적 부담을 감당하기 어려울 때, linkedin 활용을 추천)
+ 7. 리서치란 data 의 source를 찾아 계속 물고 들어가는 과정 (집요함 필수)
+ 8. Source 마다 말하는 숫자가 다를 경우 가장 공신력 있는 Source 믿기 (ep. 정부 자료)
+9. 찾으면 다 나온다라는 마음 가짐이 제일 중요 구글의 바다는 생각보다 훨씬 깊고 넓습니다. (내가 못찾으면 아무도 못 찾는다라는 마음가짐 필수)
+10. 죽어도 안나오면 합리적 추정을 통해 데이터를 창출, 여기서의 핵심은 합리적 추정
+11. key component : where to play, how to play, what to play 결론적으로 우리가 얼마나 많은 수익을 낼 수 있는지 projection
