--- a/_posts/2023-07-22-Diary.md
+++ b/_posts/2023-07-22-Diary.md
@@ -1,9 +1,9 @@
 ---
-title: 갭이어에서 만난 친구들
+title: 갭이어에서 만난 사람들
 tags: Diary GapyearProgram
 ---
 
-![KakaoTalk_Photo_2023-07-23-15-04-16](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/d9f5266e-1499-47d6-8aed-d2187c9edc2b)
+![KakaoTalk_Photo_2023-07-25-02-30-51](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/eed53cd1-bbd2-4be7-85f4-5d61f4edf850)
 
 경기도 일자리 재단의 갭이어 프로그램을 하면서 다양한 친구들, 그중에서 우리 또래랑 같은 팀을 이루고 그들과 많은 이야기를 나누고 있다. 김앤장에 비서로 일하고 있으면서 작사가를 꿈꾸는 친구와 함께, 회계사로 일을 하면서 ESG 가이드를 소상공인에 배포하여 그들에게 조금 더 도움이 될 수 있는 친구, 스마트 농업을 위해서 힘쓰고 있는 친구들을 만나고 있다. 참신한 생각을 통해서 어느 한 미션을 달성하기 위해서 노력하고 있는 친구들을 보면서 요즘 아무런 목표도 없이, 또는 욕심도 없이 지냈던 내가 다소 한심하게 느껴졌고, 요즘은 아무것도 안하더라도 혹은 무언가를 하지만 지독하게 열심히 하지 않으면서 성과가 그냥저냥 나오는 것들에게 취해있는 것이 아닌가라는 생각이 들었다.
 본인의 맞춤법이 맞는지, 본인이 어떠한 환경에서 어떠한 태도를 취하는 것에 관해서 명확하고 디테일하게 설명할 수 있다는 것, 그러한 하나하나 피곤한 노력들이 그 사람들을 다르게 만들어주는 것이라는 생각을 하게 되었고, 그러한 것들이 차이를 만들어낸다는 생각을 하게 되었다.
