--- a/_posts/2023-07-24-Review.md
+++ b/_posts/2023-07-24-Review.md
@@ -3,11 +3,19 @@ title: 뉴진스 폼 미쳤다 (최애의 아이)
 tags: Review
 ---
 
+![480](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/ba188518-196a-4f3c-8c10-72385fdf79f1)]
+
+내 최애의 아이 ... 뉴진스 ...
+
+
 <div>{%- include extensions/youtube.html id='zsYSSVoQnP4' -%}</div>
+
+
+<div>{%- include extensions/youtube.html id='nJDMAjwxthM' -%}</div>
 
 제발제발제발 이 글을 읽고 있는 분들은 뉴진스 Cool with you 뮤비 좀 봐주세요
 
-세상 모든 하입들은 다 모아두었다. (양조위, 신우석, 김혜연) 
+세상 모든 하입들은 다 모아두었다. (양조위, 신우석, 정호연) 
 
 어쩜 이렇게 샛별 같은 사람을 출시해서 사람을 홀릴 수 있는지 엄청 대단하다 뉴진스 좋아요 사랑해요 그냥 세상 다 기지세요 
 
@@ -16,4 +24,4 @@ tags: Review
 
 그나저나 사람들의 관심을 얻는다는 점에서 연예계의 환상이 누군가에는 화려함 뒤에는 다른 것들이 있는 것을 모른다는 것을 알게 되었다. 수백명의 스태프와 그러한 것들을 보여줄 수 있는 좋은 명작이라고 생각되었다. 스타플레이어라는 것이 있는지라고 생각이 들었던 요즘, 다시금 팀플레이에 관해서 생각해볼 수 있었다. 치열한 Give and Take 그 안에서 나는 어떠한 태도를 취할 것인가, 누구한테 보여주고 어떠한 것을 취할 것인가? 영리하고 기민하게 행동할 것 ... 사회 생활 너무 어려워요 뿌에엥
 
-넷플릭스 <<최애의 아이>>가 있길래 이건 무슨 씹덕 애니라고 생각했는데 미쳤다... 제발 봐주세요 
+넷플릭스 <<최애의 아이>>가 있길래 이건 무슨 씹덕 애니라고 생각했는데 미쳤다... 제발 봐주세요 주내용은 내가 좋아하던 아이돌의 아이로 태어나서 아이돌의 아버지를 찾는 내용인데 (스포금지 읍읍읍) 단순히 넷플릭스의 완급 조절 내지는 연출이 미쳤다. 뉴진스랑 최애의 아이랑 겹치면서 연에계 상황도 오버랩 되고 단순히 연예게 이상 사회에서의 팀의 역할, 퍼포먼스 스타플레이어, 역량에 관해서 다시금 생각해볼 수 있었다. 일본 애니메이션은 보통 교과서적인 교훈을 포함하고 있는 경우가 많아서 자극이 많이 되는 것 같고 그러한 컨텐츠 자체들이 일본의 국민성을 만들어가지 않나라는 생각이 들었다.
