--- a/_posts/2023-07-22-Diary.md
+++ b/_posts/2023-07-22-Diary.md
@@ -1,6 +1,6 @@
 ---
 title: 갭이어에서 만난 사람들
-tags: Diary GapyearProgram
+tags: Diary GapYearProgram
 ---
 
 ![KakaoTalk_Photo_2023-07-25-02-30-51](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/eed53cd1-bbd2-4be7-85f4-5d61f4edf850)
