--- a/_posts/2023-07-22-Study.md
+++ b/_posts/2023-07-22-Study.md
@@ -13,10 +13,15 @@ tags: Study
 6. 자주 쓰는 도형은 꼭, 자신만의 template에 저장하여 사용하기 
 7. 서식 복사 서식 붙여넣기 자주 사용하기 (ctrl + shift + c/v)
 8. 컬러 스킴 만들어두어서 다른 사람들도 사용하기 좋게 만들어두기 
+9. 상황별 차트 6선 (Stacked Bar, 100% Stacked Bar, Cluster Bar, Line Graph, 2 Axis, Cascade/Waterfall)
+10. 핵심 내용은 다른 컬러로 명확하게
+
 
 ### Excel
-1. 
-2. 
+1. Excel 은 세상에서 제일 강력한 숫자 계산 Tool (전쟁의 총과 같은 존재)
+2. PPT 와 다르게 Excel은 단축키가 중요합니다.
+3. Excel = Clarity + Flexibility(독립적으로 작동할 수 있도록) + Formatting(보기 좋게, 컬러코딩 = 파란색 하드 코딩 기입한 값, 검정색 계산한 값, 초록색 다른 시트에서 가져온 값, 빨간색 가정값)
+4.  
 
 ### Structered thinking
 1. 문제의 원인을 확인하기 위해서는 logic tree를 작성하여서 영향을 주는 모든 요소들의 원인을 찾아가도록 하기
