--- a/_posts/2023-08-01-Review.md
+++ b/_posts/2023-08-01-Review.md
@@ -1,5 +1,5 @@
 ---
-title: 책 노 임팩트 맨
+title: 노 임팩트 맨 🌱
 tags: Review Book
 ---
 
@@ -8,7 +8,7 @@ p25 무슨 이유에서인지 모르겠지만, 나는 따뜻했던 격울의 그
 
 p27 엑손 같은 기업들은 대처방안을 마련하기는커녕 은밀한 PR 전략을 동원해 경고를 전하려는 기관들을 깎아내린다. 그런가 하면 정치인들은 "지구 온난화가 기정 사실이 아니라 하나의 가설로 다시 자리매김하도록"애를 쓰고 있다.
 
-p31 내가 걱정되기 시작했던 것은 지구의 건강에 관한 한 나와 내가 속한 정치체제도 선방의 선승들과 다를 바 없지 않나 하는 점이었다. 양쪽 모두 논쟁에서 이기는 것 말고는  그 어떤 것에도 에너지를 쏭ㄷ아붓지 ㅇ낳았다. 실질적인 행동으로 옮기는 경우도 거의 없었다. 누가 기를 것인지를 놓고 다투는 동안 우화 속 고양이의 생명이 위태롭다는 것을 잊고 있었다.
+p31 내가 걱정되기 시작했던 것은 지구의 건강에 관한 한 나와 내가 속한 정치체제도 선방의 선승들과 다를 바 없지 않나 하는 점이었다. 양쪽 모두 논쟁에서 이기는 것 말고는  그 어떤 것에도 에너지를 쏟아 붓지 않았다. 실질적인 행동으로 옮기는 경우도 거의 없었다. 누가 기를 것인지를 놓고 다투는 동안 우화 속 고양이의 생명이 위태롭다는 것을 잊고 있었다.
 (중략)
 "어떻게 하면 환경문제를 이야기하되 모두들 변해야 한다는 식으로 말하지 않는 책을 쓸 수 있을지 새로운 아이디어가 떠올랐어요."
 "격렬하게 비판하지도 않고요?"
@@ -35,3 +35,39 @@ p70 오계의 제 1계는 성서에도 '사람을 죽이지 말라'라는 계명
 p72 사제, 랍비, 스님을 대체하는 현대의 긍정심리학자들도 이 부분에 대해서 한 말이 있다. 이 새로운 학파가 발견한 바에 따르면 행복한 살마들은 가진 것에 고마워하고 지난 경험을 음미하는 데 많은 시간을 할애한다. 그들은 나중으로 넘어가려고 '현재'를 후딱 흘려보내지 않는다. 자기 자신과 가족 챙기는 일을 재미있는 순간으로 넘어가기 전에 얼른 해치워야 할 일로 간주하지 않는다. 그 대신 어찌 되었건 지금 이 순간이 재미있는 순간이라고 주장한다.
 => 너무 감사한 요즘, 세상적인 기준에 치여서 나의 기준을 너무 높여서 또 불안감을 느끼고, 행복을 느끼지 않고 있는 것은 아닌지 생각하게 되었다.
 
+p98 인도의 대서사시 <바가바드 기타>에 나오는 이런 구절을 남겼다. "실천은 그 결과가 아니라 그 자체로 올바른 것이니라. 그대는 실천의 결과를 목적으로 삼지 말 것이며, 나태에 심취하지도 말라."
+
+p103 미셸의 선언에 따라 우리는 앞으로 계속 텔레비전 없는 가족이 될 것이다. 프로젝트를 시작한 지 4주밖에 안 됐는데, 생활방식이 바뀌는 데 그치는 게 아니라 바뀐 생활방식이 우리를 변화시키고 있었다.
+
+p118 미셸은 그런 나를 보며 머릿속에서 미사일을 만들고 있다고 했다.
+=> 내 블로그의 모양이 미사일인 것처럼 어떠한 미사일을 만들기 위해서 많이 공부를 하고 노력을 해보는 것도 필요하다는 생각을 하였다. (예를들면, 유튜브를 굉장히 줄여본다거나 휴대폰에 조금 더 멀리 있다거나, 조금 더 공부하는 시간을 많이 가진다거나)
+
+p125 이자벨라는 블록으로 사자를 만든다. 미셸은 소파에서 잠이 든다. 여기 이 뉴욕에서 우리 작은 가족이 날씨의 리듬에 맞춰 살다니 이 얼마나 낯설고 근사한 일인가.
+이렇게 해서 문득 생각난 이론.
+기계로 만들어진 교통수단과 개인 통화기기와 휴대용 컵에 담긴 커피가 등장하기 이전에는 스트레스 받는 일 중간에 휴식시간이 있었다. 회사에서 프레젠테이션을 앞두고 있거나 엄청난 파티에 참석해야 하거나 여자친구와 진지한 대화를 나누어야 할 때 그사이에 숨을 돌리는 시간이 있었다. 한 손에 커피를 들고 전화 통화를 하면서 택시를 타고 스트레스 받는 다음 일을 처리하러 움직이지 않았다. 휴대용 컵이 없으니 대신 그저 카페에 앉아 있었다. 전화가 없으니 그저 쉬었다. 그때에도 스트레스 받는 사건들이 있었다. 하지만 그사이에 하품을 하며 부담을 더는 달콤한 시간이 있었따. 내 이론에 따르면 우리의 머리를 여기에서 저기로 실어나르는 기계로 만든 상자와, 우리를 끊임없이 연결시키는 휴대용 전자기기가 우리에게서 하품의 시간을 빼앗아갔다. 주기적으로 깜빡여 ㅛ통을 멈추고 정적을 선사하는 빨간 신호등처럼 나날의 분주함을 차단하는 이런 시간들이 잘려나갔다. 
+
+p148 이자벨라가 하루에 쓰는 기저귀 수(6장)에 며칠 간격으로 빨겠다는 수(4일)ㅇ를 곱하면 돼요." 그래서 스물 네장이다. 
+
+p149 나는 기저귀를 바닥에 펼치고 방향을 고민한다. 알고 보니 이 기저귀를 우리 아이 몸에 부착시키는 데에도 몇 가지 선택할 문제가 있다. '앤제 트위스트' '신문접기' '거꾸로 신문 접기' '허벅지에서 접기', 기타 등등 중에서 선택해야 하는 것이다. 우리 아이의 똥만 잘 받아주면 되는데, 종이접기를 배우는 기분이다. 
+
+p151 크리스마스 때 우리 엄마네 거실에서 모두들 선물을 열어보고 있다. 너무나 멀정하 높장지가 찢기고 동그랗게 구겨져 까만색 커다란 비닐 봉지로 직행한다. 나는 슬그머니 가장 멀쩡한 포장지를 꺼내 누가 다시 그 포장지를 재활용이라도 할 것처럼 주름을 편다. 내가 왜 이렇게 된걸까? 이런 상황을 태연하게 받아들이지 못하겠다.
+=> 어쩌면 환경을 위한 것이 소비 중심보다 절약 중심이라는 스탠스의 변화라고 생각되었다.
+
+p158 한국 조계종에 이런 선사가 있었다. 지금은 돌아가셨는데, 내가 명상할 때 즐겨 찾는 선종이라는 종파를 미국에 전파한 분이다. 제자들은 그분을 대선사님이라고 불렀는데, 한국말로 위대하고 존경스러운 스승이라는 뜨이었다.
+ 아무튼 그 대선사님은 "모두들 나는 이걸 가지고 싶다, 저걸 가지고 싶다 하는데, 이 '나'에 대해서 제대로 이해하는 사람이 없다"라고 종종 말했다. 세상 모든 걸 가지고 싶어하는 '나'는 어떤 존재일까? 어디에서 왔을까? 어디로 갈까? 사는 이유가 뭘까? 죽는 이유가 뭘까? 이런 고민이 중요한 것은 우리가 욕구를 충족시켜야 ㅎ행복해진다고 믿으면서 살기 때문이다. 경제학자들의 말에 따르면 우리의 욕구는 끝이 없고, 경제는 이 끊없는 욕구를 충족시키기 위한 하나의 거대한 기계라고 한다. 문제는 우리가 사는 이 별의 자원이 무한하지 않다는 것이다. 
+ => 마찬가지로 나는 어떤 사람이 될 것인가? 그렇다면 내 시간은 어떻게 서야 하는가? 내가 어느 것을 포기하고 어느 것에 집중해야만 하는 것인가가 질문에 남아 있었다고 할 수 있다 어떤 사람들인지, 내 주변에 사람들은 나에 대해서 어떤 태도를 취하는지 그 태도가 의식적이든 무의식적이든간에 나는 어떻게 일갈해야 하는지를 명확하게 하고 기준을 세우는 것이 중요하다고 생각하게 되었다... (곧 쓸데없는 인간 관계 내지는 약속을 조금 멀리할 필요가 있다...)
+
+p226 내가 읽거나 듣기로는 랍비도 하루의 10퍼센트를 정원 손질과 설거지와 요리와 일상적인 일에 써야 된다고 한다. 그래야 다른 사람들과 관계를 맺을 수 있다. 그래야 머리를 박차고 나와 구체적으로 현실에 뛰어들 수 있다.
+=> 여태까지 그냥 공부만 하던 내 자신이랑 변화가 일어나게 될 수 있기를 !
+
+p229 하지만 뭘 알아나가는 것이 노 임팩트 맨의 취지는 아니었다. 거기서 알게 된 사실들을 실천에 옮기는 것이 노 임팩트 맨의 취지였다. 따라서 화석연료에 의존할 수밖에 없는 우리 사회의 현상태를 감안했을 떄, 진심으로 노 임팩트를 고집하고 싶으면 플러그를 꽂았을 때 나오는 전기를 아예 쓰지 않는 것이 가장 좋은 방법이었다.
+말이야 쉽지.
+처음으로 노 임팩트 실험이 조금 어이이없게 느껴졌다. 우리 별을 위해 전등을 끌 사람이 도대체 어디 있을까? 그것을 두고 진일보했다고 할 수는 없었다. 생활의 질을 이야기하는 전세계 전문가들이 비만과 싸우는 방법으로 자전거 타기를, 근교생화르이 외로움과 싸우는 방법으로 전원생활을 처방할지 몰라도 2라 수면 현상의 부활을 위해 전기 사용을 금지하자고 주장하지는 않을 것이다.
+
+p238 그런데 선가에서 이 이야기가 회자되는 것은 대선사님의 일단 저지르기 정신 때문이다. 가만히 앉아서 최선의 방법이 무엇일까 고민하기보다 세상을 구하러 나서자는 뜻이니 말이다. 각자의 위치에서 시작하면 일부는 실패하더라도 우리 중 한 명 혹은 우리들 천 명 중 두세명은 결승선을 지나 임무를 완수할 것이다. 
+
+p248 뭐가 제일 힘든지 모두들 알고 싶어한다. 포장된 제품을 안 쓰는 건지, 어디든 자전거나 킥보드를 타고 다녀야 하는 건지, 냉장고 없이 살아야 하는 건지, 그것도 아니면 무엇인지. 사실은 다 틀렸다. 가장 힘든 일은 습관을 바꾸는 것이다. 나를 타성에서 끌어내 다르게 사는 법을 배우는 것이다. 하지만 당분간은 모든게 다시 타성으로 돌아가고 싶어한다. 여기에서 당분간은 한 달을 뜻한다. 습관을 바꾸려면 한 달이 걸린다고들 한다. 
+
+p257 나는 전기를 끊고 나서 문제를 해결할 때 고려해야 할 부분이 두 가지라는 사실을 알게 된다. 첫번째로는 만족스러운 삶이 무엇인지 - 어떤 종류의 자원이 얼마만큼 있어야 행복해지는지- 고민해야 한다. 두번째로는 서양의 기준에서 보았을 때 자원 절약의 마지노선이라고 할 수 있는 그 수준까지 전세계 모든 사람들이 친환경적으로 접근할 방법을 고민해야 한다.
+
+p271 나는 여러 단체에서 자원활동을 하면서 환경운동은 적게 쓰는 운동이 아니라 더 많이 베푸는 운동이라는 사실을 깨닫는다. 배를 쑥 집어 넣는 운동이 아니라 가슴을 내놓는 운동이다. 
