--- a/_posts/2023-10-11-Diary.md
+++ b/_posts/2023-10-11-Diary.md
@@ -9,4 +9,4 @@ tags: Diary Travel USA
 
 2. 무엇보다 굴지의 기업에 다니면서 꽤 많은 차들이 팔리고 있고, 이러한 것에 영향력을 보여주고 있다는 것에 내심 뿌듯하였다. 나도 내 나름의 회사에 다니면서 임팩트 있는 활동을 해야하고, 무엇보다 거두어준 회사에 감사하다 ㅋㅋ 하지만 지극하게 자본주의이기 때문에 철저하게 돈의 논리로 승부되는 미국을 보면서 나는 너무 안일하게 회사만 다니면서 아무고토 하지 않으려 하지 않았나 생각이 들었다. 직장에서도 꽤 열심히 이제는 일 해보자! 라는 생각을 하게 되었다.
 
-3. 
+3. 남들이 어떻게 하고 다니고에 관해서 전혀 관심이 없는 것처럼 보였다. 일부러 관광인이어서 그런 것들을 인식하고 싶은대로 인식했을지는 몰라도 본인의 마음에 집중하고 본인들이  놀이기구를 타면서 불편한 점이 있으면 그것을 즉각적으로 말하고, 남눈치 안보면서 이야기 하는 것이 좋은 것이라고 생각을 하였다.
