--- a/_posts/2023-11-15-Study.md
+++ b/_posts/2023-11-15-Study.md
@@ -1,6 +1,6 @@
 ---
 title: QA ㅂㅅ
-tags: Review Book
+tags: Diary Work
 ---
 
 QA팀으로 일하면서 Negative Feed-Back이 탑재가 되어 있다보니 개선, 추가, 설계와 같은 긍정적인 분위기가 아닌 팀에서 일한다는 느낌 때문에 꽤 많이 울적했다.
@@ -13,3 +13,7 @@ QA팀으로 일하면서 Negative Feed-Back이 탑재가 되어 있다보니 개
 <div>{%- include extensions/youtube.html id='AFCaFuHwwSI' -%}</div>
 
 관련된 동영상으로 QA의 테스트 자동화와 시각화와 관련된 영상도 있는데 나중에 iDTC 추가로 첨가할 수 있으니 이 부분도 많이 공부를 해둘 것 !
+
+<div>{%- include extensions/youtube.html id='VGfWvK3I5N4' -%}</div>
+
+xFtKguLF2tM
