--- a/_posts/2023-11-15-Diary.md
+++ b/_posts/2023-11-15-Diary.md
@@ -1,5 +1,5 @@
 ---
-title: QA ㅂㅅ
+title: QA 엔지니어
 tags: Diary Work
 ---
 
@@ -15,5 +15,3 @@ QA팀으로 일하면서 Negative Feed-Back이 탑재가 되어 있다보니 개
 관련된 동영상으로 QA의 테스트 자동화와 시각화와 관련된 영상도 있는데 나중에 iDTC 추가로 첨가할 수 있으니 이 부분도 많이 공부를 해둘 것 !
 
 <div>{%- include extensions/youtube.html id='VGfWvK3I5N4' -%}</div>
-
-xFtKguLF2tM
