google analytics add

--- a/_posts/2023-11-09-Review.md
+++ b/_posts/2023-11-09-Review.md
@@ -1,7 +1,9 @@
 ---
-title: 미스치프
+title: 미스치프 전시
 tags: Review Exhibition
 ---
+미스피츠 프리뷰를 통해서 무료로 관람할 수 있어서 좋았다.
+
 
 ![KakaoTalk_Photo_2023-11-18-17-39-47 001jpeg](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/59a5e95e-d2dd-4aec-91d7-ae1f848f0701)
 
