google analytics update

--- a/_posts/2023-11-17-Diary.md
+++ b/_posts/2023-11-17-Diary.md
@@ -6,3 +6,5 @@ tags: Review Orchestra
 영화 ost 오케스트라 상영회라고 하여서 그냥 단독적으로 음악을 틀어주는 줄 알고 예습도 하려고 했지만 영화 자체를 틀어주면서 나오는 음악 때마다 오케스트라로 라이브로 연주해주는 공연이었다.
 
 꿈에 관해서 도전하는 사람은 정말 아름답다는 것을 다소 잊고 살고 있었는데, 필름 음악회를 다녀오면서 정말 잊고 있던 것에 관해서 생각하게 되었다.
+
+provider : google 추가
