--- a/_posts/2023-11-23-Review.md
+++ b/_posts/2023-11-23-Review.md
@@ -1,4 +1,17 @@
 ---
-title: google provider 11.24 ver1.1추가
-tags: Review Book
+title: Google Analytics 추가
+tags: Diary
 ---
+
+최근에 블로그 테마를 TeXt로 바꾸고 나서 Google analytics를 추가하지 못하였는데, 이번에 시간이 남아서 추가를 하게 되었다.
+
+같은 테마를 미리 적용한 사람들의 글을 참고하면서 진행하는 것이 프로그래밍 비전공자들한테는 필수적....
+
+[여기](https://infiduk.github.io/2019/11/05/google-analytics.html) 참고하였다.
+
+
+1. 구글 애널리틱스에 들어가서 계정을 만든다.
+
+2. TeXt Theme의 경우에는 _includes / google.html이 있어서 여기에 google Analytics 코드를 추가하였다.
+
+3. _config.yml에 들어가서 Google id 를 업데이트를 하였다.
