--- a/_posts/2023-12-13-Diary.md
+++ b/_posts/2023-12-13-Diary.md
@@ -16,4 +16,8 @@ tags: Diary
 <div>{%- include extensions/youtube.html id='DWlPgRy0G90' -%}</div>
 
 나는 예민한 사람이다. 그것을 인정하고 세상의 목소리를 예민하게 받아드리면서 사는 것... 굳이 외면하면서까지 살 필요도 없다.
-대단한 인물이 되기 위해서는 [여기](https://www.quora.com/How-can-I-be-as-great-as-Bill-Gates-Steve-Jobs-Elon-Musk-or-Sir-Richard-Branson/answer/Justine-Musk) 을 참고할 것
+일론 머스크의 대학생 시절부터 사귀었던 전부인이 일론 머스크가 쓴 글이 어쩌면 인생의 성공에 가까운 사람들 가장 가까이 보면서 느낀 것을 [서술](https://www.quora.com/How-can-I-be-as-great-as-Bill-Gates-Steve-Jobs-Elon-Musk-or-Sir-Richard-Branson/answer/Justine-Musk)하였는데, 꽤나 예전에 조승연의 유튜브에서도 동일한 말이 있었다. 글을 읽어보고 중용의 선택을 잘할 것.
+
+건강 챙기고, 주변 사람들과 좋은 상호 작용을 하고, 일 때문에 건강까지 해쳐가면서 지내지는 않는 것, 그러면서 최대한의 행복을 누리는 것!
+
+그냥 원론적인 이야기지만 내가 내린 결론이다. 남의 눈치를 엄청 볼 필요는 없고, 본인의 삶의 주인이 될 수 있도록 하고(내가 기준이 되어서 선택을 하고), 
