--- a/_posts/2023-12-19-Diary.md
+++ b/_posts/2023-12-19-Diary.md
@@ -6,3 +6,6 @@ tags: Diary
 <div>{%- include extensions/youtube.html id='GZv6NwaEIxU' -%}</div>
 
 스타트업 차원에서 적용해볼 수 있는 문제가 아니라 개인적인 차원에서도 적용해볼 수 있는 좋은 영상이라고 생각되었다.
+얼마나 끈기있게 도전할 것인가에 관해서는 정말 다른 사람들을 만나지 못할 정도고, 대소사의 일을 못챙길 정도로 일을 못하게 된다는 것이 인상깊었다.
+
+끈기라는 것은 결국에 어떠한 것에 끝까지 버티는 것이 아니라 성장이 그 의미에 중심이 되어야 한다는 것을 알게 되었다. 버티기만 생각하고 성공하고자 하려고 했던 것이 아닌 것을 알게 되어서 결국에 본인의 좋은 끈기라는 것은 좋은 의미라는 것을 가져야하고, 여정 그 자체의 의미를 가져야한다는 것이 울릶이 있었다.
