--- a/_posts/2023-12-13-Diary.md
+++ b/_posts/2023-12-13-Diary.md
@@ -20,6 +20,6 @@ tags: Diary
 
 건강 챙기고, 주변 사람들과 좋은 상호 작용을 하고, 일 때문에 건강까지 해쳐가면서 지내지는 않는 것, 그러면서 최대한의 행복을 누리는 것!
 
-그냥 원론적인 이야기지만 내가 내린 결론이다. 남의 눈치를 엄청 볼 필요는 없고, 본인의 삶의 주인이 될 수 있도록 하고(내가 기준이 되어서 선택을 하고), 
+그냥 원론적인 이야기지만 내가 내린 결론이다. 남의 눈치를 엄청 볼 필요는 없고, 본인의 삶의 주인이 될 수 있도록 하고(내가 기준이 되어서 선택을 하고), 무엇보다 누구보다 행복하게 행복을 추구하면서 살자. 다른 사람과 상호작용을 하면서 사는 것이다.
 
 <div>{%- include extensions/youtube.html id='n1a7o44WxNo' -%}</div>
