--- a/_posts/2024-02-06-Diary.md
+++ b/_posts/2024-02-06-Diary.md
@@ -1,8 +1,8 @@
 ---
-title: EBS 비즈니스 리뷰 - 김태용
-tags: Book Review
+title: 실리콘밸리가 미래를 설계하는 방법
+tags: Diary Review
 ---
-패스트캠퍼스 강의를 2월부터 시작하게 되었고(동생 회사에서 수강신청을 하면 20시간만 들으면 환급을 받을 수 있어서 !), '실리콘밸리가 미래를 설계하는 법이라는 법'이라고 있어서 봤더니 유튜버 태용이었다... 
+패스트캠퍼스 강의를 2월부터 시작하게 되었고(동생 회사에서 수강신청을 하면 20시간만 들으면 환급을 받을 수 있어서 !), EBS 비즈니스 리뷰에서 '실리콘밸리가 미래를 설계하는 법이라는 법'이라고 있어서 봤더니 유튜버 태용이었다... 
 
 사실 스타트업씬에 관해서 굉장히 회의적인 (비관아님) 태도를 가지고 있는 사람으로서 본인의 커리어, 업, 서비스에 관해서 열정을 가지고 있는 사람을 보면 나는 그렇게 할 수 없기 때문에 괜한 반골기질이 있기도 하고, 요즘 별로 시원찮은 영상만 올라와서 잘 안보고 있게 되는데 그냥 킬링 타임용으로 잘 보았다...
 
@@ -13,4 +13,3 @@ tags: Book Review
     2) 현명하고 작고 빠른 실행
 3. 영상을 만들기 좋은 방법 : 뻔한 질문을 통해서 특별한 대답을 받는 것
 4. 창업 실패 : 크게 시도하려고 하지 말고, 작은 것들부터 시도
-
