--- a/_posts/2023-12-21-Review.md
+++ b/_posts/2023-12-21-Review.md
@@ -57,11 +57,8 @@ ex) 서울과 경기에서 코로나 확진자 수를 조건부 서식을 하게
 사람들에게 더 많은 정보를 빠르게 전달하기 위함임
 (1) 차트의 모든 계열을 회색으로 변경
 (2) 차트에서 가장 중요한 (강조해야 하는) 데이터 선정
-(3) 타츠의 메인 컬러 (1개) 선택
+(3) 차트의 메인 컬러 (1개) 선택
 (4) 2의 중요 데이터에만 3의 메인 컬러 적용
 + 데이터 레이블 (숫자) 추가
 + 차트의 윤곽선 제거
 tip : 차트 데이터 범위를 선택할 때 왼쪽 또는 위족의 이름을 함께 선택해야 한다.
-
-
-
