--- a/_posts/2024-01-26-Review.md
+++ b/_posts/2024-01-26-Review.md
@@ -1,4 +1,28 @@
 ---
 title: 요시다 유니 전
-tags: Diary Review
+tags: Exhibition Review
 ---
+
+![미슐랭 외관](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/)
+
+![미슐랭 내부](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/cdaf0b75-ac63-43f0-bad9-86250afaaa8d)
+
+미슐랭 맛집에서 호로록 떡국을 먹고 갔다. 슴슴하니 맛있다. 미슐랭이 생각하는 특유의 에이시언 푸드는 이러한 것이구나...
+
+![과일 모자이크](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/70beb4f0-2a27-4ef6-9839-02014b0c6e3d)
+![꽃 귀걸이](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c9776b4f-14be-4144-8cf4-db74419e07a7)
+![모모 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3b79db60-ce47-48d1-8ba2-a470a02a9fa9)
+1eedf5e3-679f-4af1-b52a-de0dc982c01b)
+![사과 스케치 ](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/af2dbb44-29ef-42ce-986d-6ea9140fdb01)
+![사과 입술](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/74311376-108e-4a70-ae44-6a053406b1bc)
+![손구두 작업사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7e4a96c6-e8ef-48b0-b7a3-de760146803a)
+![아이스크림 꽃](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/51015ec9-202a-4499-bbfd-44ec14e4d538)
+![인간 구두](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/704aea8a-7cf7-41eb-94eb-cff24d7f5fc8)
+![인간 그라데이션](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/29c599e4-3845-47f7-94da-226f366c8a21)
+![인간 모자이크 작업 사진 2](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/3d099b8d-bbff-4a5e-9e8f-10d2042beaf0)
+![인간 모자이크 작업 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/491be89f-6d87-4334-ad9e-96c7272bc5b0)
+![인간 모자이크](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/e4eada18-35d4-4ae0-bbdb-e7e1aaed39b1)
+![인간 물감 작업 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/740bf510-0459-41ed-b93e-3d8644a39c91)
+![카드 사진 확대 1](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/262651b1-9a8c-4697-a17d-04718f8a4f94)
+![카드 사진 확대 2](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/d48b9acb-95a9-4e67-8bab-4f6351328096)
+![카드 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/05440747-01a8-425b-ad72-3b6520a0e064)
