--- a/_posts/2024-04-20-Review(2).md
+++ b/_posts/2024-04-20-Review(2).md
@@ -3,4 +3,34 @@ title: 미니어처 라이프 미타테 마인드 (타나카 타츠야)
 tags: Exhibition
 ---
 
-1. 미타테(MITATE)는 일본 예술조로 같은 것을 다르게 보는 것의 표현이라고 한다.
+1. 미타테(MITATE)는 일본 예술조로 같은 것을 다르게 보는 것의 표현이라고 한다. 그런거를 볼 수 있었던 전시
+
+![입구 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/908bc74e-f5c0-4eeb-9a88-b349d1d4ca72)
+
+![전체 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/a6a29ac9-a803-4610-8f76-2ae4142e279c)
+
+![미술관랆](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c2461546-a330-443c-b057-c577dec2e460)
+
+![김밥 기차](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/a3df7815-4782-437e-86e7-90dc78640a26)
+
+![반지 욕탕](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/651ccbbd-9514-451a-9369-03860fb61cbb)
+![배경색별 미니어처](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/1753b111-7bd6-4474-a800-4c3b7a98588f)
+![버섯 외계인](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c617253d-be58-4e77-a5e2-b90c40f990dc)
+![아이스크림 웨딩드레스](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/6a9675ec-0680-4949-9b8a-74690521b05c)
+![아이폰 욕탕](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/0fc15791-0b72-4f4f-9642-66dafc42a504)
+
+![전시 설명(어린이)](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/1db5313d-0334-46f1-bf28-cc2241011628)
+
+![집게 짐](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/4974825b-0127-4165-a7cd-b0c9b2c6bca1)
+![청바지 파도](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/6745fba5-a4bc-4279-b7f1-42a3975a6e7c)
+![초밥 낙하산](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7d192a09-4d3b-43c8-8f5d-6212121f2b77)
+
+![컨실러 요가](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/caa457e9-82cd-4238-922a-fc97747efa17)
+![클립 요가](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/8356102e-b656-4487-9204-4d4531063833)
+![클립 요가 2](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/aaefd557-f62e-41bf-8431-a61f0ded4e6b)
+
+![포스트잇 명판](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/19308884-ef51-41cf-92f9-43e118551cd8)
+![플룻 요리](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/a223a663-a626-46b3-b908-7236199a960f)
+![피자 소파](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b5bc036a-bb60-4a61-9749-d7ad70ce5b4f)
+
+![작업 스케치](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/77154e55-0bcd-46dd-980f-1bbaab4ba4d3)
