--- a/_posts/2024-04-20-Review.md
+++ b/_posts/2024-04-20-Review.md
@@ -2,6 +2,12 @@
 title: 기안84 전시
 tags: Exhibition
 ---
+
+![기안도 건물](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/21b39f6a-697e-43bb-bf4d-0893dae40ce4)
+
+![전시 분위기](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/42f1e79b-b0d4-489c-bb45-92296594f6ed)
+
+
 1. 성수동 대림창고에서 기안84의 전시, 기안도를 갔다. 소위 말하는 그냥 소셜 전시의 경우에는 기존 클래식 전시와는 다르게 인스타그래머블한 전시는 별로 감흥을 못 가지고 있는 것이 사실이다. 하지만 이번 전시에서 아트스트 김희민의 예술과 관련된 기획은 가히 충격적이었다. 그가 말하는 전시의 시작과 행운과 관련된 그의 깊은 생각들을 통해서 소름 돋았다. (제주에서 촬영이 있는 날 여느떄와 다름없이 장애인이 사인을 해달라고 요청을 했다. 기안84는 보통의 경우에는 행운 가득하세요 라는 말을 적어주지만 이번에 그가 생각하기에 행운이 가득하세요 라는 말이 그에게 어떠한 영향을 끼칠 수 있는지, 그러한 행운이 변화를 일으킬 수 있는지에 관한 회의를 느꼈다고 한다. 과연 행운 가득하세요라는 말이 어떻게 다가갈 수 있을지 그에게 기적을 선사해줄 수 있을지에 관해서 생각해보게 된 대목이다.)
 
 ![조장 전시](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/1e607b95-f1cb-4b68-be96-38d55669d6e7)
@@ -9,6 +15,16 @@ tags: Exhibition
 ![시간 버전](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/cf8c21bf-7046-4525-8bf3-2afdae334fb3)
 
 기안도에 들어가면 시간이라는 하나의 테마가 있었는데, 네이버 연재를 하면서 시간이 너무 빨리 갔던 그의 삶을 보면서 시간을 흐른다라는 것을 표현하였다. 달리의 작품을 오마주하였는데, 그가 원했던 롤렉스를 그려넣음으로써 결국 시계는 시계였음을 보여준다.
+
+![부처닮음](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/c7882355-dc99-49a1-a190-38fd33987ca6)
+
+![시간 2022](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/0a30e3a2-cef4-44bb-838a-78387402abd6)
+
+![시간10](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/44b0f52a-71a2-4697-9657-b45aff6353c7)
+
+![시간5](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/154eb626-e944-4a5e-942b-1300e0a450a2)
+
+![시간 제목](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/0a4f6e41-701f-4371-989a-6ebaf3c1651c)
 
 ![사이트 화면](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/bef32e09-57a7-4a62-b394-1fcf5b43b95a)
 특히 이번 전시의 경우에는 전시 하단에 QR 코드를 통해서 반응형 웹사이트에 들어가서 작품에 관한 해설을 볼 수 있었다는 점이다.
@@ -20,12 +36,15 @@ tags: Exhibition
 특히 이번에는 같은 그림의 색체를 달리하여 그린 경우가 많았는데, 이러한 것들을 자취방에다가 넣어두면 꽤 멋있겠다라는 생각을 하였다.
 
 ![우주 그림](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/1dadaadf-ee50-4fa9-affe-f169d6f09998)
-적운
+욕망의 자화상
 
 ![이스터에그](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/02805980-4845-454e-b187-368f60ae8126)
 ![이스터에그 (기안84)](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/89c3a4c9-ff0f-4b43-be18-20717f499d69)
 ![이스터에그 (한국)](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/4d35a956-6a03-4487-b9eb-375a3282e46c)
+![이스터에그(84)](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/38448a0c-a82d-4081-9390-44e8fd9fb1b9)
+
 여기저기 이스터에그를 많이 넣어두었다. 롤렉스의 상징을 본인의 케릭터에도 넣은 것을 보았다.
+
 
 
 ![작품명 우기명](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/200fb833-91b8-47cf-b893-1c78f881abdd)
@@ -35,7 +54,7 @@ tags: Exhibition
 갱얼쥐와 성수를 산책하는 모습
 
 ![부가티](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b836ad3d-14b4-4319-a586-1698517c07cb)
-부가티에다가 기안84 작품을 프린트하여 래핑한 작품인데, 한국타이어의 후원으로 이번 전시도 기획되었다고 하니, 하입을 잘 모을 수 있어서 저렴한 가격 (84,000에 볼 수 있었던 감사한 전시였다.)
+부가티에다가 기안84 작품을 프린트하여 래핑한 작품인데, 한국타이어의 후원으로 이번 전시도 기획되었다고 하니, 하입을 잘 모을 수 있어서 저렴한 가격 (8,4000에 볼 수 있었던 감사한 전시였다.)
 
 ![기안도 전체 사진](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/2155abff-9769-4ebd-ab33-6e8fd8685db6)
 
