--- a/_posts/2024-02-13-Diary.md
+++ b/_posts/2024-02-13-Diary.md
@@ -1,5 +1,5 @@
 ---
-title: [fastcampus] 일잘러 필수 스킬 모음.zip
+title: 패스트캠퍼스 일잘러 필수 스킬 모음.zip
 tags: Study
 ---
 
@@ -14,3 +14,14 @@ F2 : 개체 테두리로 바꾸기
 F4 : 개체에다가 설정했던 꾸밈 효과들 재설정하기 ~
 
 배경제거 사이트 : remove.bg/ko
+
+![메일 예의](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/9dc95ea3-7b13-446d-8d67-63cdec55786a)
+![메일 예시](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/eaa73643-55a6-4989-aa84-72a2ca10a70c)
+anglee.github.io/assets/50545088/aa084f51-686b-4363-8e34-181e2652c503)
+
+![꿀팁1](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/83b47113-ffc5-45ea-820c-ae7668692bb7)
+![꿀팁2](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/d94146e1-a109-4561-a29b-3b5ac2eeeaf7)
+![꿀팁3](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b94c3180-de05-4b24-9158-16c83a4156da)
+![꿀팁4](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/6166fcab-aa27-4b33-9bce-27ad69f43b76)
+![꿀팁5](https://github.com/hoonjanglee/hoonj
+![꿀팁6](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/76eb69bd-8867-42d2-9489-f7f7f27783e5)
