--- a/_posts/2024-04-20-Review(2).md
+++ b/_posts/2024-04-20-Review(2).md
@@ -34,3 +34,5 @@ tags: Exhibition
 ![피자 소파](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/b5bc036a-bb60-4a61-9749-d7ad70ce5b4f)
 
 ![작업 스케치](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/77154e55-0bcd-46dd-980f-1bbaab4ba4d3)
+
+2. 하루에 전시 두 개나 봤다 ㅋㅋㅋ 서울온 ㅈㅇ이랑 같이 게이트도 하고, 재밌었다.
