--- a/_posts/2024-04-27-Diary.md
+++ b/_posts/2024-04-27-Diary.md
@@ -3,8 +3,13 @@ title: 독서모임
 tags: Diary
 ---
 
-![IMG_7559](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7869dd8e-f1d9-4d2b-8207-45291b64f3b9)
+선릉 북쌔즈에서 진행한 독서모임
 
-독서모임을 하게 될 때 책을 어중이 떠중이처럼 읽고 가면 책을 읽는 시간, 책을 읽고 만나는 시간 모두 비효율적으로 쓰게 됨을 알게 되었다. 이번에 그래서 특히 더더욱 책도 다 읽으면서 포스트잇으로 정리도 하고, 위에 일기도 쓰고 하였다.
+![IMG_7494](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/56c135d7-edd3-4c44-8dcd-316d7989513d)
+
+독서모임을 하게 될 때 책을 대충 읽고 가면 책을 읽는 시간, 책을 읽고 만나는 시간 모두 비효율적으로 쓰게 됨을 알게 되었다. 이번에 그래서 특히 더더욱 책도 다 읽으면서 포스트잇으로 정리도 하고, 위에 일기도 쓰고 하였다.
 
 플러스) 개인적인 블로그에 조금 더 내 개인적인 소소한 일상도 올릴 수 있도록 해야지 
+
+
+![IMG_7559](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/7869dd8e-f1d9-4d2b-8207-45291b64f3b9)
