--- a/_posts/2024-04-27-Diary.md
+++ b/_posts/2024-04-27-Diary.md
@@ -1,11 +1,11 @@
 ---
-title: 독서모임
+title: 4월 독서모임
 tags: Diary
 ---
 
 선릉 북쌔즈에서 진행한 독서모임
 
-![IMG_7494](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/56c135d7-edd3-4c44-8dcd-316d7989513d)
+![KakaoTalk_Photo_2024-05-01-23-45-49](https://github.com/hoonjanglee/hoonjanglee.github.io/assets/50545088/8c123ad8-d31a-4040-a275-dbc03cdb5383)
 
 독서모임을 하게 될 때 책을 대충 읽고 가면 책을 읽는 시간, 책을 읽고 만나는 시간 모두 비효율적으로 쓰게 됨을 알게 되었다. 이번에 그래서 특히 더더욱 책도 다 읽으면서 포스트잇으로 정리도 하고, 위에 일기도 쓰고 하였다.
 
