--- a/_posts/2024-11-25-Review.md
+++ b/_posts/2024-11-25-Review.md
@@ -1,6 +1,6 @@
 ---
 title: 나의 눈부신 친구 - 엘레나 페렌테
-tags: Review Book
+tags: Diary
 ---
 
 1. 요즘 시간이 정말 많이 남는다는 생각이 든다. 김장을 하다가 잠깐 점심을 먹으러 삼계탕집을 갔었는데 엄마가 지금 아니면 공부할 시간도 점점 없어진다고 하여서 이제는 공부를 조금 해야하는 시가ㅣ가 왔구나 생각이 들었다. 연말에는 운동에 주안을 두지 말고, 공부에 주안을 조금 두도록 해보자.
