--- a/_posts/2024-11-29-Review.md
+++ b/_posts/2024-11-29-Review.md
@@ -1,6 +1,6 @@
 ---
 title: 보헤미안 랩소디
-tags: Review Book
+tags: Review Movie
 ---
 
 ![다운로드](https://github.com/user-attachments/assets/3eb65832-1786-403f-864d-96888a897b1e)
