--- a/_posts/2024-12-02-Diary.md
+++ b/_posts/2024-12-02-Diary.md
@@ -1,6 +1,6 @@
 ---
 title: 알차게 시작하는 12월
-tags: Review Book
+tags: Diary
 ---
 
 11월은 너무 우울해서 정말 아무것도 안하면서 지냈다. 미국 출장을 다녀오고나서 정말 체력이 크게 꺾여서 그런지 생각만 유독 많았던 그런 한달이었다.
