--- a/_posts/2024-12-02-Review.md
+++ b/_posts/2024-12-02-Review.md
@@ -5,10 +5,10 @@ tags: Review Book
 
 ![IMG_3266](https://github.com/user-attachments/assets/20378437-2576-43ec-b0f8-be8f3a152d5e)
 
->>>스포주의<<<
+'>>>스포주의<<<'
 (소설의 끝의 스포가 있으니 주의해서 읽어주세요.)
 
-안진진은 멀끔하고 tj의 성격인 회사원에 계획도 철저하게 세워오는 나영규와 np의 야생화 사진 작가, 둘 사이에서 누구와 결혼할지 결정을 해야한는 상화이다. 더욱더 그럴 것이, 그는 기구한 운명 때문에 쌍둥이인 엄마와 함께 이모의 삶이 어떻게 달라지는지 두눈으로 보았고, 그 끝은 결국에 이모가 자살하는 것으로 끝이나지만, 결국에 그는 진정으로 좋아하는 김윤규보다는 나영규를 선택하게 된다.
+안진진은 멀끔하고 xxtj의 성격인 회사원에 계획도 철저하게 세워오는 나영규와 xxnp의 야생화 사진 작가, 둘 사이에서 누구와 결혼할지 결정을 해야한는 상화이다. 더욱더 그럴 것이, 그는 기구한 운명 때문에 쌍둥이인 엄마와 함께 이모의 삶이 어떻게 달라지는지 두눈으로 보았고, 그 끝은 결국에 이모가 자살하는 것으로 끝이나지만, 결국에 그는 진정으로 좋아하는 김윤규보다는 나영규를 선택하게 된다.
 
 1. 그래서 제목이 모순인 이유는 그녀가 보았던 상황이라든가 판단이라든가가 전혀 영향을 끼치지 않은 것으로 보인다. (물론 소설의 후반부에 치매에 걸리는 아버지와 함께 동생은 감옥에 들어가게 되었던 상황이 역설적이다.)
 
