--- a/_posts/2024-12-02-Review.md
+++ b/_posts/2024-12-02-Review.md
@@ -1,11 +1,10 @@
 ---
-title: 양귀자 모순
+title: 모순
 tags: Review Book
 ---
+![KakaoTalk_Photo_2024-12-17-23-33-20](https://github.com/user-attachments/assets/30c6d345-f87c-4187-84f8-3155e064ee2a)
 
-![IMG_3266](https://github.com/user-attachments/assets/20378437-2576-43ec-b0f8-be8f3a152d5e)
-
-'>>>스포주의<<<'
+<text>>>스포주의<<</text>
 (소설의 끝의 스포가 있으니 주의해서 읽어주세요.)
 
 안진진은 멀끔하고 xxtj의 성격인 회사원에 계획도 철저하게 세워오는 나영규와 xxnp의 야생화 사진 작가, 둘 사이에서 누구와 결혼할지 결정을 해야한는 상화이다. 더욱더 그럴 것이, 그는 기구한 운명 때문에 쌍둥이인 엄마와 함께 이모의 삶이 어떻게 달라지는지 두눈으로 보았고, 그 끝은 결국에 이모가 자살하는 것으로 끝이나지만, 결국에 그는 진정으로 좋아하는 김윤규보다는 나영규를 선택하게 된다.
@@ -20,3 +19,4 @@ tags: Review Book
 
 5. 가상 캐스팅을 해봤을 떄 고뇌하는 안진진, 얼굴 속에 묻어 나오는 진중함과 장난스러움은 정소민 내지는 이솜 배우님, 엄마와 이모의 역할은 윤유선 배우님이 생각났다.
 
+![IMG_8391](https://github.com/user-attachments/assets/ff5c18ab-478f-4411-b465-fa32577bd92b)
