--- a/_posts/2024-12-21-Diary.md
+++ b/_posts/2024-12-21-Diary.md
@@ -1,21 +1,22 @@
 ---
-title: 2024년 훈장의 영화 / 책
+title: 2024년의 영화 / 책
 tags: Diary
 ---
 
 1. 헤르만 헤세 - 싯다르타
 
-2. - 구의 증명
+2. 최진영 - 구의 증명
 
-2. 아메리카스 스위트 하츠
+2. 아메리카스 스위트 하츠 (넷플릭스)
 
-3. 종말에 대처하는 캐럴의 자세
+3. 종말에 대처하는 캐럴의 자세 (넷플릭스)
 
-4. 단다단
+4. 단다단 (넷플릭스)
 
-5. 그대들은 어떻게 살 것인가
+5. 그대들은 어떻게 살 것인가 (넷플릭스)
 
-6. 인사이드 아웃 2
+6. 인사이드 아웃 2 (영화)
 
-7. 가여운 것들
+7. 가여운 것들 (영화)
 
+8. 아노라 (영화)
