--- a/_posts/2024-12-22-Diary.md
+++ b/_posts/2024-12-22-Diary.md
@@ -23,49 +23,41 @@ tags: Diary
 
 <div>{%- include extensions/youtube.html id='ObzvA8tx9aA' -%}</div>
 
-5. 재키와이 - Ez
-
-<div>{%- include extensions/youtube.html id='gw3QD2ajlfg' -%}</div>
-
-6. 에스파 - Whiplash
+5. 에스파 - Whiplash
 
 너무 힘들어간 음악 방송보다도 대학 축제에서의 가수들의 모습은 다르게 느껴진다.
 
 <div>{%- include extensions/youtube.html id='lMgq1lyIkl4' -%}</div>
 
-7. 아일릿 - Magnetic
+6. 아일릿 - Magnetic
 
 <div>{%- include extensions/youtube.html id='Vk5-c_v4gMU' -%}</div>
 
-8. Meovv - Moew
+7. Meovv - Moew
 
 <div>{%- include extensions/youtube.html id='jpLHg-AsQV0' -%}</div>
 
-9. SZA - Diamond Boy
+8. SZA - Diamond Boy
 
 <div>{%- include extensions/youtube.html id='mGO1x4POQuw' -%}</div>
 
-10. QWER - 별의 하모니 / Discord &
+9. QWER - 별의 하모니 / Discord & 가짜아이돌 / 내 이름 맑음
 양산 아이돌과는 다른 결을 보여주고 있는 qwer, 그들의 이야기를 말하는 것 같아서 이것이 힙합인 것 같다.
 
 <div>{%- include extensions/youtube.html id='Ieb8IOiFfhk' -%}</div>
 
 <div>{%- include extensions/youtube.html id='PkEl_Z9B2y4' -%}</div>
 
-11. 너드커넥션 - 가장 높은 인연
+10. 너드커넥션 - 가장 높은 인연
 
 <div>{%- include extensions/youtube.html id='9F0_WqL_lkQ' -%}</div>
 
-12. 조용필 - 그래도 돼
+11. 조용필 - 그래도 돼
 
 돌고래 유괴단이 제작한 뮤직 비디오가 압권이다. 미국 출장 중에 그냥 엉엉 울었다. 이번 지드레곤 컴백 앨범이 너무 힘이 많이 들어갔다고 생각했는데, 조용필과 Kendrik lamar가 보여준 방향은 너무 달랐다. 그래서 더 좋았다.
 
 <div>{%- include extensions/youtube.html id='bo_dfa1p950' -%}</div>
 
-13. 한로로 - 입춘
-
-<div>{%- include extensions/youtube.html id='kIiW3XRP7bU' -%}</div>
-
-14. Kendrik lamar - GNX
+12. Kendrik lamar - GNX
 
 <div>{%- include extensions/youtube.html id='D7liwdjvhWc' -%}</div>
