--- a/_posts/2024-12-22-Diary.md
+++ b/_posts/2024-12-22-Diary.md
@@ -1,63 +1,59 @@
 ---
-title: 2024년의 노래
+title: 2024년 노래
 tags: Diary
 ---
 
 오바마는 매년 연말에 인상 깊게 들었던 음악을 정리하는 것 같아서 나도 내가 들었던 여러 음악들을 리스트화해서 해보려고 한다. (2023년부터 들었던 노래도 포함)
 
-1. 21savage - Redrum
+<text>1. 21savage - Redrum</text>
 
 <div>{%- include extensions/youtube.html id='ukbiRcyzrpc' -%}</div>
 
-2. 키스 오브 라이프 - Sticky
+<text>2. 키스 오브 라이프 - Sticky</text>
 
 올해 여름 노래의 정석이었다.
 
 <div>{%- include extensions/youtube.html id='IajeQM00yfE' -%}</div>
 
-3. Tyler, The Creator - Sticky
+<text>3. Tyler, The Creator - Sticky</text>
 
 <div>{%- include extensions/youtube.html id='16KSivdIGjQ' -%}</div>
 
-4. 비비 - 사장님 도박은 재미로 하셔야 합니다.
-
-<div>{%- include extensions/youtube.html id='ObzvA8tx9aA' -%}</div>
-
-5. 에스파 - Whiplash
+<text>5. 에스파 - Whiplash</text>
 
 너무 힘들어간 음악 방송보다도 대학 축제에서의 가수들의 모습은 다르게 느껴진다.
 
 <div>{%- include extensions/youtube.html id='lMgq1lyIkl4' -%}</div>
 
-6. 아일릿 - Magnetic
+<text>6. 아일릿 - Magnetic</text>
 
 <div>{%- include extensions/youtube.html id='Vk5-c_v4gMU' -%}</div>
 
-7. Meovv - Moew
+<text>7. Meovv - Moew</text>
 
 <div>{%- include extensions/youtube.html id='jpLHg-AsQV0' -%}</div>
 
-8. SZA - Diamond Boy
+<text>8. SZA - Diamond Boy</text>
 
 <div>{%- include extensions/youtube.html id='mGO1x4POQuw' -%}</div>
 
-9. QWER - 별의 하모니 / Discord & 가짜아이돌 / 내 이름 맑음
-양산 아이돌과는 다른 결을 보여주고 있는 qwer, 그들의 이야기를 말하는 것 같아서 이것이 힙합인 것 같다.
+<text>9. QWER - 별의 하모니 / Discord & 가짜아이돌 / 내 이름 맑음</text>
+양산 아이돌과는 다른 결을 보여주고 있는 qwer, 그들의 이야기를 말하는 것 같아서 이것이 힙합인 것 같다. 사심 가득해서 2024년 아닌 노래도 추가 캬캬
 
 <div>{%- include extensions/youtube.html id='Ieb8IOiFfhk' -%}</div>
 
 <div>{%- include extensions/youtube.html id='PkEl_Z9B2y4' -%}</div>
 
-10. 너드커넥션 - 가장 높은 인연
+<text>10. 너드커넥션 - 가장 높은 인연</text>
 
 <div>{%- include extensions/youtube.html id='9F0_WqL_lkQ' -%}</div>
 
-11. 조용필 - 그래도 돼
+<text>11. 조용필 - 그래도 돼</text>
 
-돌고래 유괴단이 제작한 뮤직 비디오가 압권이다. 미국 출장 중에 그냥 엉엉 울었다. 이번 지드레곤 컴백 앨범이 너무 힘이 많이 들어갔다고 생각했는데, 조용필과 Kendrik lamar가 보여준 방향은 너무 달랐다. 그래서 더 좋았다.
+노래 그 자체보다는 돌고래 유괴단이 제작한 뮤직 비디오가 압권이다. 미국 출장 중에 그냥 엉엉 울었다. 이번 지드레곤 컴백 앨범이 너무 힘이 많이 들어갔다고 생각했는데, 조용필과 Kendrik lamar가 보여준 방향은 너무 달랐다. 그래서 더 좋았다.
 
 <div>{%- include extensions/youtube.html id='bo_dfa1p950' -%}</div>
 
-12. Kendrik lamar - GNX
+<text>12. Kendrik lamar - GNX</text>
 
 <div>{%- include extensions/youtube.html id='D7liwdjvhWc' -%}</div>
