--- a/_posts/2024-12-25-Review.md
+++ b/_posts/2024-12-25-Review.md
@@ -1,7 +1,9 @@
 ---
 title: 서브스턴스
-tags: Review
+tags: Review Movie
 ---
+
+<div>{%- include extensions/youtube.html id='SVuNBndq0uM' -%}</div>
 
 어떤 스포가 있다고하여서 나무위키, 유튜브조차 보고 가지 않았던 서브스턴스 영화에서 미의 절대적인 기준, 내지는 이창동의 '시'가 보여주었던 것처럼 개인적인 서사 안에서의 감정 변화가 있을 것이라고 했지만, 멍청한 개인 (그게 우리라고 칭해지는) 마음의 꾸준함을 보면서 우리가 경계해야할 것에 관해서 지속적으로 강조를 해주었다.
 
