--- a/_posts/2024-12-22-Diary(3).md
+++ b/_posts/2024-12-22-Diary(3).md
@@ -1,6 +1,6 @@
 ---
 title: 아노라
-tags: Diary
+tags: Review Movie
 ---
 
 ![81bb1-550tVgRoFZ91ZSrfV0OLoNpYkMeMO3v7lZQxzO5K4_r1Fv9pfPTqWbmMuZt_OJfkArdKdo3fE6TqUItf1hpqdLFQ6n7XD5VtOiQyTZ231ZoBe4dWqg2X0dJwVhjGw8L_D4FF9a9UhwUpuu-g](https://github.com/user-attachments/assets/1f35d204-90d2-487d-b7e3-65ba16afa89e)
