--- a/_posts/2025-01-04-Review.md
+++ b/_posts/2025-01-04-Review.md
@@ -3,7 +3,7 @@ title: 월레스와 그로밋 복수의 날개
 tags: Review Movie
 ---
 
-![월레스와 그로밋 복수의 날개](https://github.com/user-attachments/assets/1fad6221-774d-416a-87eb-8efda382ddef)
+![Image](https://github.com/user-attachments/assets/72ee697a-b9c0-486e-983e-2409f80c1807)
 
 4.0 / 5.0
 
