--- a/_posts/2025-01-27-Diary.md
+++ b/_posts/2025-01-27-Diary.md
@@ -8,6 +8,7 @@ tags: Diary
 ![Image](https://github.com/user-attachments/assets/37bc7a8f-2ccd-4cf9-8b87-c1b53172cd02)
 
 고딩 동창놈들이랑 스키장에 갔다. 지산이 예전에 친척형이랑 스키를 타러 갔던 곳이었구나 알았고, 이번에 좀 크게 넘어지면서 폴을 잡고 있던 것을 안놓아서 엄지 손가락이 삐었다... 클라이밍 가서 발목 삐고, 스키장 가서 오른쪽 엄지 삐고, 건강에 유념해야 하는 2025년이 되어야지.
+  위에 스키 안전 요원분이나 요즘은 오클리 스키 고글을 쓰는 것이 유행인가? 라는 생각이 들었다. 계절성에 맞는 스포츠를 하는 것은 퍽 재밌다. 비록 아파서 이번에는 공부로 점철되는 2024 F/W 시즌이지만, 2025 S/S부터는 열심히 여행도 다녀야지
 
 ![Image](https://github.com/user-attachments/assets/e810599a-800d-4394-a9a6-fb2e77c0fee6)
   성수동 보물섬에서 그릇을 샀다. 열쇠나 지갑들이 너저분하게 올려져 있는 것들이 마음에 안 들었는데, 처음에 생각했던 것은 유기 방짜 그릇에다가 놓으면 어떨까? 생각을 했는데, 단순 오브제를 그 가격에 사는 것은 만만치 않았기 때문에 그냥 느낌있는 일본 수입그릇으로 하고자 하였다. 단순 패턴이 있는 것을 보고자 했으나 생각보다 그릇이 마음에 드는 것이 없어서 단순한 6000원짜리 그릇을 샀다. 하나하나 여행 다니면서 이러한 오브제를 모으는 것도 삶을 풍성하게 만드는 방법 중에 하나가 아닐까라는 생각도 들면서 꽤 합리적인 소비를 하였다.
