--- a/_posts/2025-01-30-Review(2).md
+++ b/_posts/2025-01-30-Review(2).md
@@ -9,3 +9,5 @@ tags: Review
 
 초등학생은 슈퍼마켓에서 물건을 훔쳤고, 가끔 놀이터에서 불장난을 하는 것을 좋아했다.
 대학생은 팔꿈치와 팔목이 닿으면서 걷는 것을 좋아했다.
+
+고레에다 히로카즈 감독의 귀한 퀴어 영화였고, 어린아이의 순수성을 파괴하는 것을 주제로 잡으면 어떤 소재든 깡패로 작동하는 것 같다. 하나 하나 떡밥을 회수하는 것이 통쾌했고, 괴물은 어린아이가 아닌 어른들이라는 따끔한 죽비를 맞은 영화였다.
