--- a/_posts/2025-02-02-Diary.md
+++ b/_posts/2025-02-02-Diary.md
@@ -14,6 +14,8 @@ tags: Diary
 
 이번 설은 펑펑설이라고 엄마랑 이름을 붙였다. 눈이 많이 오면 좋은 기운이 많이 와 서설이라고 하는데, 이번 2025년은 좋은 소식이 많아졌으면 좋겠다.
 
+친척형의 딸 핑크핑크한 이름이 귀여워보여서 나도 점점 나이가 들고 있구나 생각이 든다.
+
 ![Image](https://github.com/user-attachments/assets/c843da95-a206-48ca-b16c-12a721e5f5ec)
 연휴가 있어서 피부에 신경을 쓰자고 생각하여서 프락셀을 했는데, 그닥 많이 안아팠다. 수염 제모가 훨씬 더 아팠다 ^_ㅠ
 그동안 엉망이었던 피부 때문에 피부과 선생님께서는 마치 금을 찾은 광부마냥 이것저것 해야겠다고 말을 해주셨는데, 그것이 퍽 고객을 호구로 보는 것이 아닌 본인이 정말 열정이 있어서 개선하고 싶다는 열망어린 초롱초롱한 눈이었다...
@@ -28,3 +30,5 @@ tags: Diary
 ![Image](https://github.com/user-attachments/assets/6da33256-b03f-472d-93c9-19a801f2ea7c)
 
 주말 일요일에 자취방에 와서 떡볶이를 만들어 먹고, 다시 조금 공부를 하였다. 다음주부터 이제 연휴가 없어서 일이 무진장 많을텐데 중심을 잘 잡도록 하자.
+
+(넷플릭스 별나도 괜찮아를 보고 있는데, 장애와 퀴어를 온건한 방식으로 말하고 너무 PC로 이야기를 안하여서 부담스럽지 않게 보고있다.)
