--- a/_posts/2025-01-25-Review.md
+++ b/_posts/2025-01-25-Review.md
@@ -20,4 +20,4 @@ tags: Review Book
 
  개인적으로 읽으면서 논문 형태의 독후감을 만들어보고 싶었는데, 이번 만남을 통해서 진행이 되어서 재밌었다.
 
- ![Google Docs](https://youtu.be/MEAfAviN1Ms)
+[독후감](https://youtu.be/MEAfAviN1Ms)
