--- a/_posts/2025-02-09-Diary.md
+++ b/_posts/2025-02-09-Diary.md
@@ -7,22 +7,23 @@ tags: Diary
 
  🚗 울산 출장 
 
-기아오토큐 남울산서비스점 실차 점검을 갔다. (전날 회식, 잠이 안와서 두 시간정도 잠을 자고 새벽 4시에 일어나서 본가에 가서 주차를 하고, 첫차를 타고 간 강행군..) 협력사에서 문제를 에스컬레이션 해주어서 실차 조사를 간 것이었다. 평소에 얼굴을 전혀 볼 수 없었던 카운터파트분의 대응을 잘해주시는 분을 뵀고, 무슨 연유에서 출장을 오히려 역제안(?)해주셨냐고 물어봤더니, 생산공장에서 가라고 했단다... 결국의 회사 안에서 이해관계가 있어야지 움직이는 것이구나, 동화같은 일을 생각했던 나였구나라는 생각이 스쳐갔다. 아직 회사 생활에 익숙해지려면 멀었구나
+기아오토큐 남울산서비스점 실차 점검을 갔다. (전날 회식, 잠이 안와서 두 시간정도 잠을 자고 새벽 4시에 일어나서 본가에 가서 주차를 하고, 첫차를 타고 간 강행군..) 협력사에서 문제를 에스컬레이션 해주어서 실차 조사를 간 것이 화근이었다. 평소에 얼굴을 전혀 볼 수 없었던 카운터파트분의 대응을 잘해주시는 분을 뵀고, 무슨 연유에서 출장을 오히려 역제안(?)해주셨냐고 물어봤더니, 생산공장에서 가라고 했단다... 결국의 회사 안에서 이해관계가 있어야지 움직이는 것이구나, 동화같은 일을 생각했던 나였구나라는 생각이 스쳐갔다. 아직 회사 생활에 익숙해지려면 멀었구나
 
 ![Image](https://github.com/user-attachments/assets/6810222d-ab8b-4e8b-b630-c2d04bb77b4c)
 
-기사식당에서 점심도 5500원으로 먹었다. 울산이라는 도시는 중공업이 발달해서 2층에 있는 기사 식당에 도르레를 이용한 작은 음식용 엘리베이터가 있었는데, 주변이 이래서 중요한 것이구나라는 생각.
+기사식당에서 점심도 5500원으로 먹었다. 울산이라는 도시는 중공업이 발달해서 2층에 있는 기사 식당에 도르레를 이용한 작은 음식용 엘리베이터가 있었는데, 주변이 이래서 중요하다.
 
 ![Image](https://github.com/user-attachments/assets/480ba19f-71d9-4bde-9c60-2a65139702fc)
 
  📣 경기도청년봉사단
 
-경기도청년봉사단에 합격했다. 대학 졸업 이후에 사회적 환원에 관해서 역할을 못하고 있다고 생각했는데, 이번 경기도청년봉사단이 마중물이 되어서 사회적인 활동을 할 수 있는 계기가 되었으면 한다. 최근 그래미 어워즈의 kendrik lamar 의 곡이 좋았고, Drake와의 디스전을 보면서 나에대해서 반추해볼 수 있는 기회가 되었다. 미국 너무나도 상품적인 아티스트 Drake와 다소 Consious적인 kendrik. 사회에 메세지를 전달하고, 본인의 철학을 전파하는 모습을 볼 수 있었다.
- 대학에 입학하고, 그때는 한창 일베가 창궐하는 시기였기 때문에 사회적인 목소리를 내고, 대자보를 쓰고, 책을 많이 읽고, 대화를 깊이 있게 하는 선배들이 너무 멋졌다. 그러한 선배들이 지금은 어떻게 사는지 모르지만, 영악한 뱀처럼 시장이 있는 기회를 따라서만 움직인 내 스스로가 반대로 사회적인 참여도 하고, 문화적인 인식도 부단히 해야함을 느낀 일주일이었다. kendrik 과 Drake는 TBD
+경기도청년봉사단에 합격했다. 대학 졸업 이후에 사회적 환원에 관해서 역할을 못하고 있다고 생각했는데, 이번 경기도청년봉사단이 마중물이 되어서 사회적인 활동을 할 수 있는 계기가 되었으면 한다. 최근 그래미 어워즈의 kendrik lamar 의 곡이 좋았고, Drake와의 디스전을 보면서 나에대해서 반추해볼 수 있었다. 너무나도 상품적인 아티스트 Drake와 다소 Consious적인 Kendrik. 사회에 메세지를 전달하고, 본인의 철학을 전파하는 모습을 볼 수 있었다.
+ 대학에 입학하고, 그때 한창 일베가 창궐하는 시기였기 때문에 사회적인 목소리를 내고, 대자보를 쓰고, 책을 많이 읽고, 대화를 깊이 있게 하는 선배들이 너무 멋져 보였다. 그러한 선배들이 지금은 어떻게 사는지 모르지만, 영악한 뱀처럼 시장이 있는 기회를 따라서만 움직인 내 스스로가 반대로 사회적인 참여도 하고, 문화적인 인식도 부단히 해야함을 느낀 일주일이었다. kendrik 과 Drake는 TBD
 
- <div>{%- include extensions/youtube.html id='6947VwjEtxw' -%}</div>
-<div>{%- include extensions/youtube.html id='Erh4nhSBP90' -%}</div>
 <div>{%- include extensions/youtube.html id='H58vbez_m4E' -%}</div>
+
+<div>{%- include extensions/youtube.html id='6947VwjEtxw' -%}</div>
+<div>{%- include extensions/youtube.html id='Erh4nhSBP90' -%}</div>
 
 
 ![Image](https://github.com/user-attachments/assets/cec4e6c9-f44e-44be-8a32-c062a5106683)
